DropDown: Added work around for chrome bug preventing whitespaces.
Due to the use of color:inherit and DOM attribute manipulation while typing, a bug in Chrome v. 99 prevented user from entering whitespaces. This work around resolves the problem.

See https://bugs.chromium.org/p/chromium/issues/detail?id=1309014 for more details.

--- a/Controls/DropDown/DropDown.css
+++ b/Controls/DropDown/DropDown.css
@@ -167,6 +167,7 @@ div.FitUiControlDropDownItems input
 	font-style: inherit;
 	font-weight: inherit;
 	color: inherit;
+	white-space: pre; /* Bug fix: color:inherit triggers bug in Chrome 99 which prevents whitespaces from working: https://bugs.chromium.org/p/chromium/issues/detail?id=1309014 */
 
 	width: 5px;
 
